<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ultimate Stopwatch</string>
    <string name="app_name_caps">Stopwatch</string>
    <string name="message_stopped">Stopped</string>
    <string name="timer_title">Set Countdown Timer</string>
    <string name="timer_start">OK</string>
    <string name="timer_cancel">Cancel</string>

    <string name="save_time">save time</string>
    <string name="splittimes">Split Times</string>
    <string name="lap_time_recorded">Lap Time Recorded</string>
    <string name="delete">Delete</string>
    <string name="stopwatch">STOPWATCH</string>
    <string name="countdown">COUNTDOWN</string>
    <string name="laptimes">LAP TIMES</string>

    <string name="hours">Hours</string>
    <string name="mins">Mins</string>
    <string name="secs">Secs</string>
    <string name="play_store_uri">http://play.google.com/store/apps/details?id=com.geekyouup.android.ustopwatch</string>
    <string name="countdown_complete">Countdown Complete!</string>
    <string name="default_time">00:00:00.000</string>
    <string name="_0">0</string>

    <string name="times">Times</string>
    <string name="reset_button">Reset Button</string>
    <string name="clear_laps">Clear Laps</string>
    <string name="info">Info</string>
    <string name="settings">Settings</string>
    <string name="clearlaps">Clear all laps</string>
    <string name="start">START</string>
    <string name="pause">PAUSE</string>
    <string name="reset">RESET</string>
    <string name="lap">LAP</string>

    <string name="contentdesc_start_sw">Start/Pause Stopwatch</string>
    <string name="contentdesc_start_cd">Start/Pause Countdown</string>
    <string name="contentdesc_reset">Reset</string>
    <string name="contentdesc_laptime">Save Lap Time</string>

    <string name="settings_settings">SETTINGS</string>
    <string name="settings_about">ABOUT</string>
    <string name="settings_libraries">LIBRARIES</string>
    <string name="settings_laptimer">Enable Lap Times</string>
    <string name="settings_sound_secs">Sound for Seconds</string>
    <string name="settings_vibrate">Vibrations</string>
    <string name="settings_endless_alert">Extra Long Alert</string>
    <string name="settings_animations">Hand Animations</string>
    <string name="settings_about_text">The Ultimate Stopwatch, developed by Rich \'GeekYouUp\' Hyndman and designed by marie-schweiz.de</string>

</resources>