<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/countdown_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/countdown_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/time_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/default_time"
        android:textColor="@color/white"
        android:textSize="@dimen/counter_font" />

    <com.geekyouup.android.ustopwatch.fragments.StopwatchCustomVectorView
        android:id="@+id/cdview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/time_counter"
        android:layout_marginBottom="45dp"
        custom:watchType="type_countdown" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/blue_button_bg"
        android:divider="@drawable/divider_vertical_blue"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/blue_button_bg_color"
            android:contentDescription="@string/contentdesc_start_cd"
            android:fontFamily="sans-serif"
            android:text="@string/start"
            android:textColor="@drawable/blue_button_text_color"
            android:textSize="@dimen/bottom_bar_portrait_button_font_size" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/blue_button_bg_color"
            android:contentDescription="@string/contentdesc_reset"
            android:fontFamily="sans-serif"
            android:text="@string/reset"
            android:textColor="@drawable/blue_button_text_color"
            android:textSize="@dimen/bottom_bar_portrait_button_font_size" />
    </LinearLayout>

</RelativeLayout>